Changed wrapper classes from data to value classes in domain; added default channel role and update member role features.
