# code/jvm/im-http-api/src/main/kotlin/im/api/model/input/body/ChannelCreationInputModel.kt
@@ -1,6 +1,7 @@
 package im.api.model.input.body
 
 import im.api.model.input.validators.IsBool
+import im.api.model.input.wrappers.ChannelRole
 import im.api.model.input.wrappers.Name
 import jakarta.validation.Valid
 
@@ -13,14 +14,18 @@ import jakarta.validation.Valid
 data class ChannelCreationInputModel(
     @field:Valid
     val name: Name,
+    @field:Valid
+    val defaultRole: ChannelRole,
     @field:IsBool
     val isPublic: String,
 ) {
     constructor(
         name: String,
+        defaultRole: im.domain.channel.ChannelRole,
         isPublic: Boolean,
     ) : this(
         Name(name),
+        ChannelRole(defaultRole.toString()),
         isPublic.toString(),
     )
 }
